<resources>
    <string name="app_name">IOOC</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="default_notification_channel_id" translatable="false">LMS</string>
    <string name="default_notification_channel_des" translatable="false">Notifications From LMS</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_icon">Image Icon</string>
    <string name="image_icon_search">Search Icon</string>
    <string name="image_icon_notification">Notification Icon</string>
    <string name="ok">OK</string>
    <string name="type">Type</string>
    <string name="language">Language</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="request_error">Request error, please try again.</string>
    <string name="please_wait_while_processing_your_request">Please wait while processing your request.</string>
    <string name="no_results_found">No results found.</string>
    <string name="iooc">IOOC</string>
    <string name="learn_anywhere_and_anytime">Learn Anywhere and Anytime</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabs">tabs</string>
    <string name="tab_text_courses">Courses</string>
    <string name="tab_text_instructors">instructors</string>
    <string name="tab_text_moocs">MOOCs</string>
    <string name="request_server_error">Can\'t connect to server, please check your internet connection and try again.</string>
    <string name="invalid_request">Invalid Request</string>
    <string name="hello">Hello!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_signing_up_you_agree_to_iooc_s_terms_conditions_and_privacy_policy">By signing up you agree to IOOC\'s Terms conditions and Privacy policy.</string>
    <string name="class_room">Class Room</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="searchFrom">Search</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="see_all">See All</string>
    <string name="top_rated_courses">Top Rated Courses</string>
    <string name="offered_courses">Offered Courses</string>
    <string name="notifications">Notifications</string>
    <string name="edit_picture">Edit Picture</string>

    <string name="facebook_app_id">379978515921183</string>
    <string name="fb_login_protocol_scheme">fb379978515921183</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="app_version">IOOC v1.1</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_iooc">Rate IOOC</string>
    <string name="enrollments">Enrollments</string>
    <string name="passed">Passed</string>
    <string name="avg_grade">AVG. Grade</string>
    <string name="my_courses">My Courses</string>
    <string name="upcoming_courses">Upcoming courses</string>
    <string name="passed_courses">Passed courses</string>
    <string name="uncompleted_courses">Uncompleted courses</string>
    <string name="apply_for_course">Apply for course</string>
    <string name="content">Content:</string>
    <string name="number_of_sessions">Number of sessions:</string>
    <string name="price">Price:</string>
    <string name="course_details">Course Details</string>
    <string name="max_number_of_students">Max number of students:</string>

    <string name="groups">Groups</string>
    <string name="submit">Submit</string>
    <string name="Write_message">Write Message</string>
    <string name="pay">Pay</string>
    <string name="no_internet_connection">No internet connection!</string>

    <string name="typing">Typing</string>
    <string name="no_messages_found">No messages found</string>
    <string name="course_name">Course Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="faculty">faculty</string>
    <string name="student_id">Student ID</string>
    <string name="national_id">National ID</string>
    <string name="university">University</string>
    <string name="register">Register</string>
    <string name="date">Date</string>
    <string name="course">Course</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="date_">Date:</string>
    <string name="course_">Course:</string>
    <string name="position_">Position:</string>
    <string name="birth_date_">Birth Date:</string>
    <string name="cv_">CV:</string>
    <string name="rating_">Rating:</string>
    <string name="courses_">Courses:</string>
    <string name="instructor_details">Instructor Details</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="done">Done</string>
    <string name="add_course">Add Course</string>
    <string name="add_group">Add Group</string>
    <string name="create_course">Create Course</string>
    <string name="payment_text">Your payment is Secure and encrypted</string>
    <string name="card_name">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_duration">MM/YYYY</string>
    <string name="card_cvc">CVC</string>
    <string name="live">live</string>
    <string name="quizzes">Quizzes</string>
    <string name="video_url">Video URL</string>
    <string name="materials">Materials</string>
    <string name="quiz">Quiz</string>
    <string name="time">Time</string>
    <string name="material_link">Material Link</string>
    <string name="sessions">Sessions</string>
    <string name="button_add_session">Button Add Session</string>
    <string name="add_session">Add Session</string>
    <string name="verified_certificate_of_completion">VERIFIED CERTIFICATE OF COMPLETION</string>
    <string name="certificate_info">In recognition of their commitments to achieving professional excellence,</string>
    <string name="certificate_info_two"> This certifies that Eng.</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="has_successfully_completed_the">Has successfully completed the</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="iooc_application">Iooc Application</string>
    <string name="choose_your_option">Choose Your Option</string>
    <string name="certificate">Certificate</string>
    <string name="rate_course">Rate Course</string>
    <string name="rate_instructor">Rate Instructor</string>
    <string name="rate_now">Rate Now</string>
    <string name="choose">Choose</string>

</resources>
