<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/more_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/more_profile_imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image_icon"
                android:src="@drawable/img_vector_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/more_profile_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/gotham_rounded_book"
                android:textColor="@color/colorTitle"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/more_profile_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/more_profile_email_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gotham_rounded_book"
                android:textColor="@color/colorTitle"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/more_profile_name_textView"
                app:layout_constraintTop_toBottomOf="@id/more_profile_name_textView" />

            <TextView
                android:id="@+id/more_profile_phone_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/gotham_rounded_book"
                android:textColor="@color/colorTitle"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/more_profile_name_textView"
                app:layout_constraintTop_toBottomOf="@id/more_profile_email_textView" />

            <Button
                android:id="@+id/more_edit_profile_button"
                style="@style/PopularButtonAccent"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/gotham_rounded_book"
                android:text="@string/edit_profile"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/more_profile_name_textView"
                app:layout_constraintTop_toBottomOf="@id/more_profile_phone_textView" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/more_settings_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:text="@string/settings"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/more_aboutUs_textView"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_book"
            android:text="@string/about_us" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray">

        </View>

        <TextView
            android:id="@+id/more_contactUs_textView"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_book"
            android:text="@string/contact_us" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray">

        </View>

        <TextView
            android:id="@+id/more_terms_textView"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_book"
            android:text="@string/terms_and_conditions" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray">

        </View>

        <TextView
            android:id="@+id/more_rate_textView"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_rounded_book"
            android:text="@string/rate_iooc" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGray">

        </View>

        <TextView
            android:id="@+id/more_logout_textView"
            style="@style/SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="center"
            android:text="@string/log_out" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.3"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/colorTitle"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>